--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -37,13 +37,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for application in applications|sort((a, b) => a.vacancy.vacancydate <=> b.vacancy.vacancydate) %}
+                    {% for application in applications|sort((a, b) => a.applicationdate <=> b.applicationdate) %}
                         <tr>
-                            <td>{{ application.vacancy.vacancydate|date("d/m/Y") }}</td>
+                            <td>{{ application.applicationdate|date("d-m-Y") }}</td>
                             <td><a href="/vacancy/show/{{application.vacancy.id}}" class="orangetext">{{ application.vacancy.function}}</a></td>
                             <td><a href="/userprofile/show/{{application.vacancy.user.id}}" class="greytext">{{ application.vacancy.user.companyname}}</a></td>
-                            <td><a href="/vacancy/show/{{application.vacancy.id}}" class="orangetext">{% if application.invited == 1 %}
-                                <i class="fas fa-check" style=" font-size: 2.5rem"></i></a></td>                             
+                            <td class="orangetext">{% if application.invited == 1 %}
+                                <i class="fas fa-check" style=" font-size: 2.5rem"></i>
+                            </td>                             
                             {% endif %}
                         </tr> 
                     {% endfor %}
