--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
         </div>
 
         <div class="layout">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x body-white">
                 <div class="small-2 medium-2 large-2">
                     {% block logo %}
                     {% endblock %}
