--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -75,3 +75,32 @@
     background: linear-gradient(359.5deg, rgba(241,90,36,1) 0%, rgba(241,90,36,1) 50%, rgba(171,65,27,1) 51%, rgba(241,90,36,1) 61%, rgba(241,90,36,1) 100%);
 
 }
+
+.footer-home{
+    background-color: #333333;
+    color: white;
+    height: 20%;
+    width: 100%;
+    font-family: 'bebas_neueregular';
+    position: relative;
+    bottom: 0px;
+}
+
+.logo-footer-home{
+    background-color: #333333;
+    width: 50%;
+    height: auto;
+}
+
+.footer-header-home{
+    font-family: 'bebas_neueregular';
+    color: white;
+    font-weight: bold;
+    font-size: 25px; 
+}
+
+.footer-text-home{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-style: italic;  
+}
