--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -45,10 +45,10 @@
 
 /* BODY FEATURES */
 
-.body-orange{
+.body-white{
     position: relative;
-    background-color: #F15A24;
     width: 100%;
+    padding-bottom: 100px;
 }
 
 
@@ -57,11 +57,11 @@
 .footer{
     background-color: #333333;
     color: white;
-    height: 10%;
+    height: 20%;
     width: 100%;
     font-family: 'bebas_neueregular';
-    padding: 0px;
-    position: relative;
+    position: absolute;
+    bottom: -300px;
 }
 
 .logo-footer{
