--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -49,7 +49,7 @@
                         </tr>
                     {% endfor %}
                 </tbody>
-            </table><br><br><br><br><br>
+            </table>
         </div>
     </div>                           
 {% endblock %}
