--- a/templates/base-althome.html.twig
+++ b/templates/base-althome.html.twig
@@ -53,7 +53,7 @@
         </div>
 
         <div class="layout">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x body-white">
                 <div class="small-1 medium-1 large-1">
                 </div>
                 <div class="small-10 medium-10 large-10">
