--- a/templates/base-homepage.html.twig
+++ b/templates/base-homepage.html.twig
@@ -62,7 +62,7 @@
             </div>
         </div>
        
-        <div class="footer">
+        <div class="footer-home">
             <div class="grid-x">
                 <div class="small-12 medium-12 large-12"> 
                     <div id="footer">
