--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -79,7 +79,7 @@
                 <br>
                 <button type="submit" id="_submit" name="_submit" class="btn btn-succes">
                     <a href="" class="orangetext-apply">
-                    <i class="fas fa-arrow-right"></i>  Sollicitatie Aanpassen</a>
+                    <i class="fas fa-arrow-right"></i>  Vacature Aanpassen</a>
                 </button>
 
             {% endif %}
