--- a/public/assets/css/vacancypage.css
+++ b/public/assets/css/vacancypage.css
@@ -112,5 +112,12 @@
     color: red;
 }
 
-
+.vacancy-edit input{
+    width: 100%;
+    font-family: 'robotocondensed';
+    font-size: 32px;
+    box-shadow: none;
+    border: none;
+    border-bottom : 2px solid #F15A24;
+}
 
